# flick-installer

./: .clangd  CMakeLists.txt  InstallerWorker.cpp  InstallerWorker.h  Main.qml  README.md  main.cpp  qml.qrc  rs.qrc  utild.cpp  utild.h  vcpkg.json
android/: AndroidManifest.xml
qml/: Main.qml  qml.qrc
src/: InstallerWorker.h  main.cpp  utild.cpp  utild.h
